# python-weekend-ba-task

./: README.md  pyproject.toml
src/: args.py  booking.py  flight.py  parallelism.py  recursion.py  solution.py  status.py  trip.py
